bulb on off add component

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,10 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: #131b31;">
+  <body >
+    <!-- style="background-color: #131b31;"
+    background body color
+    -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
